<resources>
    <string name="app_name">MainActivity</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Infografia</string>
    <string name="title_notifications">Ofertas</string>
    <string name="title_notifications2">Ajustes</string>
    <string name="servicio_descripcion">Detalle de servicio</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_base">EasyRecicler</string>
    <string name="olvidePass">Me olvidé mi contraseña</string>
    <string name="registrarse">Registrarme</string>
    <string name="txt_ingresar">ingresar</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Contraseña</string>





    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyD0MmROnBhn6VxKrLl_EAbLc5k5kkMIIoY</string>
</resources>
