<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/backgroud"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:background="@color/rectangle"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"></LinearLayout>





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.5"
            android:orientation="vertical"
            android:paddingHorizontal="25dp"
            android:gravity="center">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:hint="@string/hint_email"
                app:boxBackgroundColor="@color/colorCajaTexto"
                android:textColorHint="@color/colorBlack"
                android:layout_marginVertical="8dp"


                >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/log_edt_correo"
                    android:drawableLeft="@drawable/ic_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorBlack"
                    android:textSize="18dp"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:passwordToggleEnabled="true"
                android:hint="@string/hint_password"
                app:boxBackgroundColor="@color/colorCajaTexto"
                android:textColorHint="@color/colorBlack"
                android:layout_marginVertical="8dp"


                >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/log_edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="textPassword"
                    android:textColor="@color/colorBlack"
                    />

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingHorizontal="25dp">

            <android.support.design.button.MaterialButton
                android:id="@+id/log_btn_ingresar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                app:cornerRadius="16dp"
                android:backgroundTint="@color/colorButton"
                android:text="@string/txt_ingresar"
                android:textColor="@color/colorWhite"
                android:textSize="18dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/btn_passOlvide"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/olvidePass"
                    android:textSize="18dp"
                    android:textColor="@color/colorWhite"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/log_btn_registrarse"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/registrarse"
                    android:textSize="18dp"
                    android:textColor="@color/colorWhite"
                    android:gravity="center"/>
            </LinearLayout>


        </LinearLayout>




    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"></LinearLayout>

</LinearLayout>